--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,6 +13,9 @@ builds:
     goos:
       - linux
 
+    goarch:
+      - amd64
+
     ldflags:
       - -s -w -X main.version={{.Version}} -X main.commit={{.ShortCommit}} -X main.date={{ .CommitDate }}
 
